# directmedia_framework

./: .gitignore  .gitmodules  CMakeLists.txt  copyright.txt  vcpkg.json
doc/: todo.txt
resource/: font.fnt
src/app/: app.c  app.h
src/asset/font/: font.bmfc
src/audio/: audio.h
src/audio/private/: audio.c  audio_private.h
src/cmake/: InstallAppImage.cmake  InstallRuntimeDependencies.cmake
src/data/: data.c  data.h  data_font.c  data_font.h  data_music.c  data_music.h  data_raw.c  data_raw.h  data_sound.c  data_sound.h  data_texture.c  data_texture.h  data_type_manager.h  data_types.h
src/data/private/: data.c  data_font.c  data_music.c  data_raw.c  data_sound.c  data_texture.c  data_type_manager.h
src/file/: file.c  file.h  file_blob.c  file_blob.h  file_chunk.c  file_chunk.h  file_font.c  file_font.h  file_music.c  file_music.h  file_surface.c  file_surface.h  file_type_manager.h
src/framework/: app.c  app.h  app_const.c.in  commands.c  commands.h  defs.h  dict.c  dict.h  file.c  file.h  file_blob.c  file_blob.h  file_chunk.c  file_chunk.h  file_font.c  file_font.h  file_music.c  file_music.h  file_surface.c  file_surface.h  font.c  font.h  frames.c  ini.c  linear.c  main.c  nanotime.h  opengl_util.c  opengl_util.h  print.c  print.h  queue.c  queue.h  render.c  render.h  string_util.c
src/game/: game.c  game.h  present.c  present.h
src/input/: action.c  action.h
src/input/private/: action.c
src/main/: app.c  app.h  main.c  main.h  prog.h
src/main/private/: app.c  app_private.h  main.c  prog.c  prog_private.h
src/menu/: menu.c  menu.h
src/opengl/: glad.c  glad.h  opengl.c  opengl.h
src/render/: frames.c  frames.h  layers.c  layers.h  print.c  print.h  render.c  render.h  render_types.h  sprites.c  sprites.h
src/render/private/: frames.c  frames.h  glad.c  khrplatform.h  layers.c  layers.h  opengl.c  opengl.h  print.c  print.h  render.c  render_private.h  sprites.c  sprites.h
src/resource/: convert_to_png32.sh  icon.xcf
src/util/: conqueue.c  conqueue.h  dict.c  dict.h  font.c  font.h  ini.c  ini.h  linear.c  linear.h  log.c  log.h  mathematics.c  mathematics.h  maths.h  mem.c  mem.h  nanotime.h  queue.c  queue.h  str.h  string_util.c  string_util.h  text.c  text.h  util.c  util.h
src/util/private/: conqueue.c  ini.c  log.c  log_private.h  maths.c  mem.c  mem_private.h  nanotime.c  str.c
